# sync

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  vix.json
cmake/: softadastra_syncConfig.cmake.in
examples/: CMakeLists.txt  basic_sync.cpp  remote_apply.cpp  retry.cpp
include/softadastra/sync/ack/: AckTracker.hpp
include/softadastra/sync/applier/: RemoteApplier.hpp
include/softadastra/sync/conflict/: ConflictResolver.hpp
include/softadastra/sync/core/: SyncConfig.hpp  SyncContext.hpp  SyncEnvelope.hpp  SyncOperation.hpp  SyncState.hpp
include/softadastra/sync/engine/: SyncEngine.hpp
include/softadastra/sync/outbox/: Outbox.hpp  OutboxEntry.hpp
include/softadastra/sync/queue/: SyncQueue.hpp
include/softadastra/sync/scheduler/: SyncScheduler.hpp
include/softadastra/sync/types/: AckStatus.hpp  ConflictPolicy.hpp  SyncDirection.hpp  SyncStatus.hpp
include/softadastra/sync/utils/: SyncIdGenerator.hpp
src/ack/: AckTracker.cpp
src/applier/: RemoteApplier.cpp
src/conflict/: ConflictResolver.cpp
src/core/: SyncConfig.cpp  SyncContext.cpp  SyncEnvelope.cpp  SyncOperation.cpp  SyncState.cpp
src/engine/: SyncEngine.cpp
src/outbox/: Outbox.cpp  OutboxEntry.cpp
src/queue/: SyncQueue.cpp
src/scheduler/: SyncScheduler.cpp
src/utils/: SyncIdGenerator.cpp
tests/: CMakeLists.txt  test_ack.cpp  test_applier.cpp  test_conflict.cpp  test_engine.cpp  test_outbox.cpp  test_queue.cpp  test_recovery.cpp  test_sync_operation.cpp
